--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,37 +19,37 @@
 <h2 class="section-heading text-center">Our Services</h2>
 <div class="grid px-3">
     <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
-      <div class="serv-i s-icon1"><a ></a></div>
-      <h5 class="mb-3"><a >PSD to HTML Conversion</a></h5>
-      <p class="description mb-2">Transform your creative designs into functional web pages with our PSD to HTML conversion service.</p>
+      <div class="serv-i s-icon1"><a [routerLink]="['/psd-html']">icon1</a></div>
+      <h5 class="mb-3"><a [routerLink]="['/psd-html']">PSD to HTML Conversion</a></h5>
+      <p>Transform your creative designs into functional web pages with our PSD to HTML conversion service.</p>
          </div>
 
     <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
-        <div class="serv-i s-icon2"><a ></a></div>
-      <h5 class="mb-3"><a >WordPress Development</a></h5>
-      <p class="description mb-2">Harness the power of WordPress for your web presence.</p>
+        <div class="serv-i s-icon2"><a [routerLink]="['/wordpress']">icon2</a></div>
+      <h5 class="mb-3"><a [routerLink]="['/wordpress']">WordPress Development</a></h5>
+      <p>Harness the power of WordPress for your web presence.</p>
          </div>
 
     <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
-        <div class="serv-i s-icon3"><a ></a></div>
-      <h5 class="mb-3"><a >Angular Web Development</a></h5>
-      <p class="description mb-2">Leverage the power of Angular to build dynamic and interactive web applications.</p>
+        <div class="serv-i s-icon3"><a [routerLink]="['/angular']">icon3</a></div>
+      <h5 class="mb-3"><a [routerLink]="['/angular']">Angular Web Development</a></h5>
+      <p>Leverage the power of Angular to build dynamic and interactive web applications.</p>
          </div>
     
     <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
-        <div class="serv-i s-icon4"><a ></a></div>
-      <h5 class="mb-3"><a >Single Page Application</a></h5>
-      <p class="description mb-2">Experience the benefits of a Single Page Application (SPA) for your web presence.</p>
+        <div class="serv-i s-icon4"><a [routerLink]="['/singlepage']">icon4</a></div>
+      <h5 class="mb-3"><a [routerLink]="['/singlepage']">Single Page Application</a></h5>
+      <p>Experience the benefits of a Single Page Application (SPA) for your web presence.</p>
          </div>
     <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
-        <div class="serv-i s-icon5"><a ></a></div>
-        <h5 class="mb-3"><a >Ionic</a></h5>
-        <p class="description mb-2">Experience in Ionic  to perform fast on the all of the latest mobile devices.</p>
+        <div class="serv-i s-icon5"><a [routerLink]="['/ionic']">icon5</a></div>
+        <h5 class="mb-3"><a [routerLink]="['/ionic']">Ionic</a></h5>
+        <p>Experience in Ionic  to perform fast on the all of the latest mobile devices.</p>
                  </div>
           <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
-            <div class="serv-i s-icon6"><a ></a></div>
-            <h5 class="mb-3"><a >Android and IOS</a></h5>
-            <p class="description mb-2">Experience in to build high-quality iOS, Android  Apps.</p>
+            <div class="serv-i s-icon6"><a [routerLink]="['/ios-adroid']">icon6</a></div>
+            <h5 class="mb-3"><a [routerLink]="['/ios-adroid']">Android and IOS</a></h5>
+            <p>We create sleek, user-friendly apps for Apple devices, taking advantage of the iOS platform's features and the extensive iOS user base.</p>
                          </div>
   </div>
 
@@ -60,15 +60,13 @@
 
 
 
-
-
 <section class="page-section3 d-flex align-items-center clearfix">
   <div class="container">
 
     <div class="row d-flex align-items-baseline  flex-row-reverse">
      
       <div class="col-lg-6 col-md-6 col-12 abt-cnt">
-        <div class="abt-box text-white bc-gray p-5">
+        <div class="abt-box text-white bc-gray p-lg-5 p-4 text-lg-start text-md-center text-center">
         <h2>About us</h2>
         <p class="mb-4">At Soft Genic, we are passionate about the digital world and dedicated to crafting exceptional web experiences. We are a team of skilled and creative web developers who thrive on turning your ideas into functional, visually stunning, and user-friendly websites.</p>
         <div class="intro-button mx-auto"><a class="btc-white rounded-pill px-4 py-3 fw-bold d-inline-block" 
@@ -87,19 +85,19 @@
     <div class="grid text-center">
     <div class="choos-box g-col-12 g-col-md-6 g-col-lg-3 p-4">
       <h5 class="mb-3">Expertise</h5>
-      <p class="description mb-2">We are experienced web developers having well-versed in the latest technologies and trends in web development. We bring a wealth of knowledge to every project, ensuring that your website is built to industry best practices.</p>
+      <p>We are experienced web developers having well-versed in the latest technologies and trends in web development. We bring a wealth of knowledge to every project, ensuring that your website is built to industry best practices.</p>
          </div>
          <div class="choos-box g-col-12 g-col-md-6 g-col-lg-3 p-4">
           <h5 class="mb-3">Custom Solutions</h5>
-          <p class="description mb-2">We understand that every project is unique. That's why we take a personalized approach to web development, tailoring our solutions to meet your specific needs and goals</p>
+          <p>We understand that every project is unique. That's why we take a personalized approach to web development, tailoring our solutions to meet your specific needs and goals</p>
              </div>
             <div class="choos-box g-col-12 g-col-md-6 g-col-lg-3 p-4">
             <h5 class="mb-3">User-Centric Approach</h5>
-            <p class="description mb-2">We prioritize the user experience in everything we do. Our websites are designed with your target audience in mind, making sure they are easy to navigate, responsive on all devices, and optimized for performance.</p>
+            <p>We prioritize the user experience in everything we do. Our websites are designed with your target audience in mind, making sure they are easy to navigate, responsive on all devices, and optimized for performance.</p>
             </div>
             <div class="choos-box g-col-12 g-col-md-6 g-col-lg-3 p-4">
             <h5 class="mb-3">Timely Delivery</h5>
-            <p class="description mb-2">We understand the importance of deadlines. When you work with us, you can count on us to deliver your project on time and within budge</p>
+            <p>We understand the importance of deadlines. When you work with us, you can count on us to deliver your project on time and within budge</p>
               </div>
             
 </div>
@@ -114,7 +112,7 @@
     
     <div class="row d-flex align-items-center">
      
-    <div class="col-lg-6 col-md-6 col-12 mission-box p-5 bc-gray text-white">
+    <div class="col-lg-6 col-md-6 col-12 mission-box p-lg-5 p-40 bc-gray text-white text-lg-start text-md-center text-center">
       <h2>Our Mission</h2>
      <p>Our mission is simple: to empower businesses and individuals with the digital tools they need to succeed in the online landscape. We believe that a well-designed website is more than just a digital presence; it's a powerful asset that can help you connect with your audience, showcase your brand, and achieve your goals.</p>
     </div>
@@ -129,6 +127,15 @@
 
     </div>
     </section>
+    <ngb-carousel>
+      <ng-template ngbSlide>
+        <img src="image1.jpg" alt="Slide 1">
+      </ng-template>
+      <ng-template ngbSlide>
+        <img src="image2.jpg" alt="Slide 2">
+      </ng-template>
+      <!-- Add more ngbSlide templates for additional slides -->
+    </ngb-carousel>
 
 
 
