--- a/src/app/tech/tech.component.html
+++ b/src/app/tech/tech.component.html
@@ -3,45 +3,37 @@
     <h2 class="section-heading text-center">Our Services</h2>
     <div class="grid slider-item mt-3 px-3">
         <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
-          <div class="serv-i s-icon1"><a [routerLink]="">icon1</a></div>
-          <h5 class="mb-3"><a [routerLink]="">PSD to HTML Conversion</a></h5>
-          <p class="description mb-2">Transform your creative designs into functional web pages with our PSD to HTML conversion service. We take your Photoshop designs and turn them into pixel-perfect, responsive HTML and CSS. Our expert developers ensure that your website looks stunning on all devices.
-
-            Whether you have a single-page concept or a multi-page website, we have the expertise to bring your vision to life. Let us handle the technical aspects while you focus on delivering a great user experience.</p>
+          <div class="serv-i s-icon1"><a [routerLink]="['psd-html']">icon1</a></div>
+          <h5 class="mb-3"><a [routerLink]="['psd-html']">PSD to HTML Conversion</a></h5>
+          <p>Transform your creative designs into functional web pages with our PSD to HTML conversion service.</p>
              </div>
     
         <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
-            <div class="serv-i s-icon2"><a [routerLink]="">icon2</a></div>
-          <h5 class="mb-3"><a [routerLink]="">WordPress Development</a></h5>
-          <p class="description mb-2">Harness the power of WordPress for your web presence. Our WordPress development services are tailored to meet your unique needs. Whether you're starting a blog, launching an online store, or creating a corporate website, we've got you covered.
-
-            We specialize in WordPress customization, theme development, and plugin integration. With our help, you can have a user-friendly, scalable, and SEO-friendly website that's easy to manage. Let's build your online identity with WordPress.</p>
+            <div class="serv-i s-icon2"><a [routerLink]="['/wordpress']">icon2</a></div>
+          <h5 class="mb-3"><a [routerLink]="['/wordpress']">WordPress Development</a></h5>
+          <p>Harness the power of WordPress for your web presence.</p>
              </div>
     
         <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
-            <div class="serv-i s-icon3"><a [routerLink]="">icon3</a></div>
-          <h5 class="mb-3"><a [routerLink]="">Angular Web Development</a></h5>
-          <p class="description mb-2">Leverage the power of Angular to build dynamic and interactive web applications. Our Angular development services are designed to create responsive and feature-rich applications that engage your users.
-
-            With Angular's flexibility and our expertise, we can develop web applications that meet your specific requirements. Whether it's a single-page app or a complex enterprise solution, our team is skilled at delivering high-quality Angular development projects.</p>
+            <div class="serv-i s-icon3"><a [routerLink]="['/angular']">icon3</a></div>
+          <h5 class="mb-3"><a [routerLink]="['/angular']">Angular Web Development</a></h5>
+          <p>Leverage the power of Angular to build dynamic and interactive web applications.</p>
              </div>
         
         <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
-            <div class="serv-i s-icon4"><a [routerLink]="">icon4</a></div>
-          <h5 class="mb-3"><a [routerLink]="">Single Page Application</a></h5>
-          <p class="description mb-2">Experience the benefits of a Single Page Application (SPA) for your web presence. SPAs offer a seamless user experience by loading content dynamically, eliminating the need for page refreshes.
-
-            Our SPA development services focus on creating fast, efficient, and highly responsive applications. From navigation to content loading, we ensure that your SPA delivers a smooth and enjoyable experience for your users.</p>
+            <div class="serv-i s-icon4"><a [routerLink]="['/single-page']">icon4</a></div>
+          <h5 class="mb-3"><a [routerLink]="['/single-page']">Single Page Application</a></h5>
+          <p>Experience the benefits of a Single Page Application (SPA) for your web presence.</p>
              </div>
         <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
-            <div class="serv-i s-icon5"><a [routerLink]="">icon5</a></div>
-            <h5 class="mb-3"><a [routerLink]="">Ionic</a></h5>
-            <p class="description mb-2">Experience in Ionic  to perform fast on the all of the latest mobile devices. Build apps with a small footprint and built-in best practices like hardware accelerated transitions, touch-optimized gestures, pre-rendering, and more.</p>
+            <div class="serv-i s-icon5"><a [routerLink]="['/ionic']">icon5</a></div>
+            <h5 class="mb-3"><a [routerLink]="['/ionic']">Ionic</a></h5>
+            <p>Experience in Ionic  to perform fast on the all of the latest mobile devices.</p>
                      </div>
               <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
-                <div class="serv-i s-icon6"><a [routerLink]="">icon6</a></div>
-                <h5 class="mb-3"><a [routerLink]="">Android and IOS</a></h5>
-                <p class="description mb-2">We create sleek, user-friendly apps for Apple devices, taking advantage of the iOS platform's features and the extensive iOS user base.Our Android apps are designed to be versatile, compatible with a wide range of devices, and optimized for the Android ecosystem, For those seeking a cost-effective solution, we offer cross-platform app development, allowing you to reach both Android and iOS users with a single codebas</p>
+                <div class="serv-i s-icon6"><a [routerLink]="['/ios-adroid']">icon6</a></div>
+                <h5 class="mb-3"><a [routerLink]="['/ios-adroid']">Android and IOS</a></h5>
+                <p>We create sleek, user-friendly apps for Apple devices, taking advantage of the iOS platform's features and the extensive iOS user base.</p>
                              </div>
       </div>
     
