--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -42,7 +42,7 @@
             </li>
            
             <li class="nav-item">
-              <a [routerLink]="['/home']" class="nav-link">Contact Us</a>
+              <a [routerLink]="['/contact']" class="nav-link">Contact Us</a>
             </li>
           </ul>
         </div>
