--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -15,7 +15,7 @@
           <a target="_blank" [href]="sathizie('https://www.instagram.com/softgenicservices')"   class="btn btn-neutral btn-icon-only btn-dribbble btn-lg btn-round">
             <i class="fa fa-instagram"></i>
           </a>
-          <a target="_blank"  class="btn btn-neutral btn-icon-only btn-github btn-round btn-lg">
+          <a target="_blank" [href]="sathizie('https://www.linkedin.com/in/soft-genic-services-461419298/')" class="btn btn-neutral btn-icon-only btn-github btn-round btn-lg">
             <i class="fa fa-linkedin" aria-hidden="true"></i>
           </a>
         </div>
