--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -76,3 +76,7 @@ div#navbarNav {display: none;}
 .hd-rt {display: block !important;text-align: center !important;}
 .offcanvas {width: 70% !important;}
 }
+
+.offcanvas {background-color: #3c2f8b;}
+
+.offcanvas a.nav-link, .offcanvas-header .btn-close {color:#fff;}
