--- a/src/app/tech/tech.component.html
+++ b/src/app/tech/tech.component.html
@@ -2,37 +2,37 @@
     <div class="container">
     <h2 class="section-heading text-center">Our Services</h2>
     <div class="grid slider-item mt-3 px-3">
-        <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
-          <div class="serv-i s-icon1"><a [routerLink]="['psd-html']">icon1</a></div>
-          <h5 class="mb-3"><a [routerLink]="['psd-html']">PSD to HTML Conversion</a></h5>
+        <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0" [routerLink]="['/psd-html']">
+          <div class="serv-i s-icon1"><a>icon1</a></div>
+          <h5 class="mb-3">PSD to HTML Conversion</h5>
           <p>Transform your creative designs into functional web pages with our PSD to HTML conversion service.</p>
              </div>
     
-        <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
-            <div class="serv-i s-icon2"><a [routerLink]="['/wordpress']">icon2</a></div>
-          <h5 class="mb-3"><a [routerLink]="['/wordpress']">WordPress Development</a></h5>
+        <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0" [routerLink]="['/wordpress']">
+            <div class="serv-i s-icon2"><a>icon2</a></div>
+          <h5 class="mb-3">WordPress Development</h5>
           <p>Harness the power of WordPress for your web presence.</p>
              </div>
     
-        <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
-            <div class="serv-i s-icon3"><a [routerLink]="['/angular']">icon3</a></div>
-          <h5 class="mb-3"><a [routerLink]="['/angular']">Angular Web Development</a></h5>
+        <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0" [routerLink]="['/angular']">
+            <div class="serv-i s-icon3"><a>icon3</a></div>
+          <h5 class="mb-3">Angular Web Development</h5>
           <p>Leverage the power of Angular to build dynamic and interactive web applications.</p>
              </div>
         
-        <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
-            <div class="serv-i s-icon4"><a [routerLink]="['/single-page']">icon4</a></div>
-          <h5 class="mb-3"><a [routerLink]="['/single-page']">Single Page Application</a></h5>
+        <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0" [routerLink]="['/singlepage']">
+            <div class="serv-i s-icon4"><a>icon4</a></div>
+          <h5 class="mb-3">Single Page Application</h5>
           <p>Experience the benefits of a Single Page Application (SPA) for your web presence.</p>
              </div>
-        <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
-            <div class="serv-i s-icon5"><a [routerLink]="['/ionic']">icon5</a></div>
-            <h5 class="mb-3"><a [routerLink]="['/ionic']">Ionic</a></h5>
+        <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0" [routerLink]="['/ionic']">
+            <div class="serv-i s-icon5"><a>icon5</a></div>
+            <h5 class="mb-3">Ionic</h5>
             <p>Experience in Ionic  to perform fast on the all of the latest mobile devices.</p>
                      </div>
-              <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
-                <div class="serv-i s-icon6"><a [routerLink]="['/ios-adroid']">icon6</a></div>
-                <h5 class="mb-3"><a [routerLink]="['/ios-adroid']">Android and IOS</a></h5>
+              <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0" [routerLink]="['/ios-android']">
+                <div class="serv-i s-icon6"><a>icon6</a></div>
+                <h5 class="mb-3">Android and IOS</h5>
                 <p>We create sleek, user-friendly apps for Apple devices, taking advantage of the iOS platform's features and the extensive iOS user base.</p>
                              </div>
       </div>
