--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,7 @@
       <button class="btc-secondary px-2 py-1" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i class="fa fa-bars" aria-hidden="true"></i></button>
       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
         <div class="offcanvas-header">
-          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          <button type="button" class="btn-close btn-close-white text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav">
@@ -63,7 +63,7 @@
                     <h6 class="text-uppercase">App Development</h6>
                   <div class="dropdown-menu-inner"><ul class="list-group">
                     <li><a [routerLink]="['/ionic']">Ionic</a></li>
-                    <li><a [routerLink]="['/ios-ad']">Android and IOS</a></li>
+                    <li><a [routerLink]="['/ios-android']">Android and IOS</a></li>
                     </ul></div>
                 </div>
                 </div>
