--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -12,14 +12,9 @@
 
 
 
+.page-section2 {padding: 6% 0 8%;}
 
-
-
-
-
-.page-section2 {padding: 5% 0 8%;}
-
-.page-section2 h2 {margin-bottom: 120px;}
+.page-section2 h2 {margin-bottom: 50px;}
 
 .serv-btn a {border-bottom: 2px solid #a94196;}
 
@@ -34,7 +29,7 @@
 .abt-cnt:before {position:absolute;content: "";background-color: #3c2f8b;width: 40%;height: 130%;left:-50px;top:0;bottom: 0;margin:auto;z-index: 1;}
 .abt-box {position: relative;z-index: 9;}
 
-.page-section4 {padding:5% 0;background-image: url('/../assets/images/choose-img.jpg');background-size: cover;background-repeat: no-repeat;position: relative;z-index: 1;background-attachment: fixed;}
+.page-section4 {padding:6% 0;background-image: url('/../assets/images/choose-img.jpg');background-size: cover;background-repeat: no-repeat;position: relative;z-index: 1;background-attachment: fixed;}
 .page-section4:before {position: absolute;content: "";left:0;right:0;top:0;bottom:0;margin:auto;background-color: rgb(60 47 139 / 75%);width: 100%;height:100%;z-index: -1;}
 .choos-box {background-color: rgba(255,255,255,0.5);border: 3px solid #fff;
     border-radius: 5px;}
@@ -70,11 +65,6 @@
 
 
 
-
-.carousel-item {
-    height: 200px;
-    width: 400px;
-  }
   
   .orange {
     background: rgb(230, 191, 119);
@@ -88,12 +78,20 @@
     background: rgb(236, 179, 179);
   }
   
+
+  
   @media (max-width: 992px) {
-    .page-section {min-height: 500px;}
+    .page-section {min-height: auto;padding: 50px 0;}
     .page-section3:before {left: 0;top: -50px;}
     .about-img img {margin-top: 0;}
     .abt-cnt:before {display: none;}
     .miss-img {margin-left: 0;}
     .miss-img:before {right: 0;top: -10px;}
     .miss-img img {padding-top:0;}
+    .page-section2 h2 {margin-bottom: 20px;}
+
   }
+
+
+
+  
