--- a/src/app/inner-pages/ios-ad/ios-ad.component.html
+++ b/src/app/inner-pages/ios-ad/ios-ad.component.html
@@ -3,7 +3,7 @@
        
          
             <div class="overflow-hidden col-lg-6 col-md-12 col-sm-12 mb-4 me-lg-5 float-start mx-auto text-center in-img">
-              <img class="img-fluid" src="../assets/images/ios-ad.jpg" alt="ios-ad">
+              <img class="img-fluid" src="../assets/images/mds.jpg"  alt="ios-ad">
             </div>
             <h2 class="text-dark font-weight-bold mb-3 text-uppercase">Android and IOS</h2>
             
