--- a/src/styles.scss
+++ b/src/styles.scss
@@ -107,9 +107,10 @@ button, html [type="button"], [type="reset"], [type="submit"] {
 // Services
 
 
-.serv-box {margin-bottom: 60px;box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.2);background-color: #ffffff;}
+.serv-box {margin-bottom: 60px;box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.2);background-color: #ffffff;cursor: pointer;}
 
-.serv-box h5 a{color:#3c2f8b !important;cursor: pointer;}
+
+.serv-box h5 {color:#3c2f8b !important;}
 .serv-i a {position: relative;display: inline-block;padding-top: 100px;font-size: 0;cursor: pointer;}
 
 .serv-i a:before {width:90px;height: 90px;position: absolute;content: "";left:0;top:-40px;border:5px solid #3c2f8b;padding:45px;background-repeat: no-repeat;background-position: center;background-color: #ffffff;border-radius: 10px;}
@@ -128,16 +129,49 @@ button, html [type="button"], [type="reset"], [type="submit"] {
 .serv-box:hover .serv-i.s-icon5 a:before {background-image: url('/../assets/images/ich6.png');}
 .serv-box:hover .serv-i.s-icon6 a:before {background-image: url('/../assets/images/ich5.png');}
 
-.serv-box:hover h5 a{color:#a94196 !important;}
+.serv-box:hover h5 {color:#a94196 !important;}
 
 .serv-box:hover {
-	-webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    -o-transform: scale(1.1);
-    transform: scale(1.1);
+	-webkit-transform: scale(1.03);
+    -moz-transform: scale(1.03);
+    -ms-transform: scale(1.03);
+    -o-transform: scale(1.03);
+    transform: scale(1.03);
     transition: 1s;
 }
 
 
-.inner-page h2 {margin-bottom: 120px;}
+.inner-page h2 {margin-bottom: 80px;}
+
+
+.services-slide.owl-carousel .owl-stage-outer  {
+    padding-top: 60px !important;
+  }
+  .services-slide .owl-nav {text-align: center;}
+  .services-slide .owl-nav button {
+    width: 40px;
+    height: 40px;
+    font-size: 30px !important;
+    line-height: 1 !important;
+    background: #3c2f8b !important;
+    margin: 0 5px;
+    color: #fff !important;
+}
+.services-slide .owl-nav button:hover {background: #a94196 !important;}
+
+.in-img {position: relative;padding: 20px 0 0 20px}
+
+.in-img::before {position: absolute;
+    content: "";
+    background-color: #3c2f8b;
+    width: 40%;
+    height: 90%;
+    left: -20px;
+    top: -20px;
+    
+}
+.in-img img {position: relative;}
+
+@media (max-width:991px) {
+	.services-slide .owl-nav {margin-bottom: 20px;}
+}
