--- a/src/app/tech/tech.component.html
+++ b/src/app/tech/tech.component.html
@@ -1,6 +1,7 @@
 <section class="inner-page d-flex align-items-center clearfix bc-light py-5">
     <div class="container">
     <h2 class="section-heading text-center">Our Services</h2>
+    <p>Our services are designed to elevate your online presence, drive growth, and achieve your digital goals. </p>
     <div class="grid slider-item mt-3 px-3">
         <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0" [routerLink]="['/psd-html']">
           <div class="serv-i s-icon1"><a>icon1</a></div>
