--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,9 +4,8 @@
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
 
 
-
-
-
+  @import 'ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
+  @import 'ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
 
 * {
 	box-sizing: border-box;
