--- a/src/styles.scss
+++ b/src/styles.scss
@@ -174,3 +174,6 @@ button, html [type="button"], [type="reset"], [type="submit"] {
 @media (max-width:991px) {
 	.services-slide .owl-nav {margin-bottom: 20px;}
 }
+.owl-carousel .owl-stage{
+    padding-top: 50px;
+  }
